--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Sophie Bass" />
+<meta name="author" content="Ben Brikman" />
 
 
 <title>Index</title>
@@ -279,22 +279,14 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Sophie Bass</a>
+      <a class="navbar-brand" href="index.html">Ben Brikman</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="Introduction.html">Introduction</a>
+  <a href="bds516.hw9.html">Introduction</a>
 </li>
 <li>
-  <a href="Methodology.html">Methodology</a>
-</li>
-<li>
-  <a href="Results.html">Results</a>
-</li>
-<li>
-  <a href="Conclusion.html">Conclusion</a>
-</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -308,8 +300,8 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Index</h1>
-<h4 class="author">Sophie Bass</h4>
-<h4 class="date">4/22/2021</h4>
+<h4 class="author">Ben Brikman</h4>
+<h4 class="date">4/25/2021</h4>
 
 </div>
 
