--- a/index.html
+++ b/index.html
@@ -284,9 +284,8 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="bds516.hw9.html">Introduction</a>
+  <a href="bds416.hw9.html">Twitter Project</a>
 </li>
-<li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
