--- a/index.html
+++ b/index.html
@@ -300,14 +300,13 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Index</h1>
 <h4 class="author">Ben Brikman</h4>
-<h4 class="date">4/25/2021</h4>
 
 </div>
 
 
 <p><span class="math display">\[\\[.01in]\]</span></p>
-<div id="Welcome-to-my-website!!!" class="section level4">
-<h4>Welcome to my website!!!.</h4>
+<div id="welcome-to-my-website" class="section level4">
+<h4>Welcome to my website!!!</h4>
 </div>
 
 
