--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Ben Brikman" />
 
 
-<title>Index</title>
+<title>Ben Brikman</title>
 
 <script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -298,8 +297,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Index</h1>
-<h4 class="author">Ben Brikman</h4>
+<h1 class="title toc-ignore">Ben Brikman</h1>
 
 </div>
 
