--- a/bds516.hw9.html
+++ b/bds516.hw9.html
@@ -263,10 +263,17 @@ $(document).ready(function () {
 </div>
 
 
-<p>#Homework 9</p>
+<div id="homework-9" class="section level1">
+<h1>Homework 9</h1>
 <p>Thank you to everyone in the Blue Whales for contributing to this project! (Ben Brikman, Arvind Bala, Minglu Xu, Jimena Velazquez, Eva Zhang)</p>
-<p>#Introduction: This submission is for my Data Science And Quantitative Modeling course (BDS 585) for the Master of Behavioral and Decision Sciences (MBDS) program at the University of Pennsylvania. Recently, our class has been learning about text analysis and how to apply it to real tweets. In order to practice what we’ve learned, my group and I attempted to see if we could create an algorithm that could effectively analyze elements of a tweet and indicate whether it is one of the two people of interest. In our case, the two people of interest are two of the professors from the MBDS program, Alex Shpenev (instructor for BDS-585) and Eugen Dimant (instructor for BDS-501).</p>
-<p>#Methodology: Our method to both learn some text analysis techniques and create the prediction algorithm was: 1) scrape the tweets from the twitter accounts of Alex Sphenev and Eugen Dimant, 2) load libraries that were shown in class, 3) balance out the number of tweets so that they are roughly the same (because Dimant had much more than Shpenev), 4) split the data into train and test data, 5) create several models (leveraging train and test data) and then see how well the accuracy is among the models (shown by naive bayes calculations as well as confusion matrices), 6) plot the most popular words by user (this wasn’t for the prediction algorithm, but just an interesting exercise), 7) create and test a prediction algorithm to see the efficacy on related and unrelated tweets.</p>
+</div>
+<div id="introduction" class="section level1">
+<h1>Introduction:</h1>
+<p>This submission is for my Data Science And Quantitative Modeling course (BDS 585) for the Master of Behavioral and Decision Sciences (MBDS) program at the University of Pennsylvania. Recently, our class has been learning about text analysis and how to apply it to real tweets. In order to practice what we’ve learned, my group and I attempted to see if we could create an algorithm that could effectively analyze elements of a tweet and indicate whether it is one of the two people of interest. In our case, the two people of interest are two of the professors from the MBDS program, Alex Shpenev (instructor for BDS-585) and Eugen Dimant (instructor for BDS-501).</p>
+</div>
+<div id="methodology" class="section level1">
+<h1>Methodology:</h1>
+<p>Our method to both learn some text analysis techniques and create the prediction algorithm was: 1) scrape the tweets from the twitter accounts of Alex Sphenev and Eugen Dimant, 2) load libraries that were shown in class, 3) balance out the number of tweets so that they are roughly the same (because Dimant had much more than Shpenev), 4) split the data into train and test data, 5) create several models (leveraging train and test data) and then see how well the accuracy is among the models (shown by naive bayes calculations as well as confusion matrices), 6) plot the most popular words by user (this wasn’t for the prediction algorithm, but just an interesting exercise), 7) create and test a prediction algorithm to see the efficacy on related and unrelated tweets.</p>
 <pre class="python"><code># Set seed for reproducibility
 import random; random.seed(420)
 # Import all we need from sklearn
@@ -520,8 +527,13 @@ MONTERO HAS OFFICIALLY REACHED 600K DISLIKES! 🤍🥳
 
 Lil Nas X - MONTERO (Call Me By Your Name) (Offi… https://t.co/RiOjOPDzXm: [&#39;shpenev&#39;]
 Prediction for tweet: RT @vulture: Lil Nas X Pentatonixes himself before Pentatonix can Pentatonix him. https://t.co/G0twArKXkW: [&#39;shpenev&#39;]</code></pre>
-<p>#Results: For the TFIDF, Count and the SVC model - the naive bayes calculation was just around 65%, meaning the accuracy of predictions were roughly 65% correct (the breakdown true vs. predicted labels is shown by the confusion matrices). As for the prediction algorithm, it predicted Shpenev for every single entry. It did this for Shpenev tweets, Dimant tweets, and for unrelated public tweets. It seems that this was the case because the models correctly predicted many Shpenev tweets (84/85 or 98.8 for the all three models) but correctly predicted much less for Dimant tweets (33/94 or 35.1% for the all three models).</p>
-<p>#Conclusion: Although our algorithm runs, it seems that our algorithm primarily predicts Shpenev, even when the tweets are from Dimant. For this reason, I consider this algorithm ineffective and in need of further work. Also, one possible issue is the small sample of tweets. If I repeated this algorithm with different people it is possible that I’d get different results.</p>
+</div>
+<div id="results-for-the-tfidf-count-and-the-svc-model---the-naive-bayes-calculation-was-just-around-65-meaning-the-accuracy-of-predictions-were-roughly-65-correct-the-breakdown-true-vs.-predicted-labels-is-shown-by-the-confusion-matrices.-as-for-the-prediction-algorithm-it-predicted-shpenev-for-every-single-entry.-it-did-this-for-shpenev-tweets-dimant-tweets-and-for-unrelated-public-tweets.-it-seems-that-this-was-the-case-because-the-models-correctly-predicted-many-shpenev-tweets-8485-or-98.8-for-the-all-three-models-but-correctly-predicted-much-less-for-dimant-tweets-3394-or-35.1-for-the-all-three-models." class="section level1">
+<h1>Results: For the TFIDF, Count and the SVC model - the naive bayes calculation was just around 65%, meaning the accuracy of predictions were roughly 65% correct (the breakdown true vs. predicted labels is shown by the confusion matrices). As for the prediction algorithm, it predicted Shpenev for every single entry. It did this for Shpenev tweets, Dimant tweets, and for unrelated public tweets. It seems that this was the case because the models correctly predicted many Shpenev tweets (84/85 or 98.8 for the all three models) but correctly predicted much less for Dimant tweets (33/94 or 35.1% for the all three models).</h1>
+</div>
+<div id="conclusion-although-our-algorithm-runs-it-seems-that-our-algorithm-primarily-predicts-shpenev-even-when-the-tweets-are-from-dimant.-for-this-reason-i-consider-this-algorithm-ineffective-and-in-need-of-further-work.-also-one-possible-issue-is-the-small-sample-of-tweets.-if-i-repeated-this-algorithm-with-different-people-it-is-possible-that-id-get-different-results." class="section level1">
+<h1>Conclusion: Although our algorithm runs, it seems that our algorithm primarily predicts Shpenev, even when the tweets are from Dimant. For this reason, I consider this algorithm ineffective and in need of further work. Also, one possible issue is the small sample of tweets. If I repeated this algorithm with different people it is possible that I’d get different results.</h1>
+</div>
 
 
 
