--- a/bds516.hw9.html
+++ b/bds516.hw9.html
@@ -425,7 +425,7 @@ plot_confusion_matrix(tfidf_nb_cm, classes=[&#39;eugen_dimant&#39;, &#39;shpenev
 <img src="output_6_1.png" alt="" />
 <p class="caption">png</p>
 </div>
-<pre class="python"><code>plot_confusion_matrix(count_nb_cm, classes=[&#39;eugen_dimant&#39;, &#39;shpenev&#39;], title=&quot;TF-IDF NB Confusion Matrix&quot;)</code></pre>
+<pre class="python"><code>plot_confusion_matrix(count_nb_cm, classes=[&#39;eugen_dimant&#39;, &#39;shpenev&#39;], title=&quot;Count NB Confusion Matrix&quot;)</code></pre>
 <pre><code>Confusion matrix, without normalization</code></pre>
 <div class="figure">
 <img src="output_7_1.png" alt="" />
